解决构建后连接数据库失败问题

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "nideshop - open source mini program shop",
   "version": "1.0.0",
   "scripts": {
-    "start": "node development.js",
+    "start": "NODE_ENV=production node production.js",
+    "start:dev": "node development.js", 
     "compile": "babel --no-babelrc src/ --presets think-node --out-dir app/",
     "lint": "eslint src/",
     "lint-fix": "eslint --fix src/"
